src/yini_test/cases/golden/lenient/valid/strings/c-triple-quoted-with-escapes.yini
@yini

^ Strings
message = C"""tab:\there"""
