src/yini_test/cases/golden/lenient/invalid/strings/classic-string-invalid-octal.yini
@yini

^ Strings
key = C"\o378"
